delete non-used imports and inline construction of ApiResponse at controllers